--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lefly",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://vidhishah08.github.io/lefly",
+  
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,9 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
